# bt-flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: api-generator.md  exceptions.md  schemas.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  production.md  python-api.md  schema-inference.md
examples/: basic_usage.py
src/bt/: __init__.py  cli.py  core.py  exceptions.py  schemas.py
tests/: conftest.py  test_cli.py  test_core.py
